# google-photos-backup

./: .env.example  .gitignore  Cargo.toml  README.md
infra/: package-lock.json
infra/lib/: infra-stack.ts
src/: auth.rs  aws.rs  drive.rs  main.rs
